--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           name: rspec
-          command: bundle install && bundle exec rake db:migrate && bundle exec rspec
+          command: bundle install && bundle exec rake db:create db:schema:load --trace RAILS_ENV=test && bundle exec rspec
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
