Debugging CircleCI logic error with code coverage(9)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ jobs:
   build:
     docker:
       - image: 'tghastings/code-esaas'
-        # environment: 
-        #   HEROKU_API_KEY: 1a97e88d-7b03-4f7b-a153-cd9a3b4a4f0a
-        #   SECRET_KEY_BASE: 78398d0c18776dbff3ee18af9c975efc491bd67dd67c4f8c0308ce2aa88d9f6c54d4dc7b83221b003d2decd7a0628a920d29623738e5ca705c6ed6c50ced2752
+        environment: 
+          HEROKU_API_KEY: 1a97e88d-7b03-4f7b-a153-cd9a3b4a4f0a
+          SECRET_KEY_BASE: 78398d0c18776dbff3ee18af9c975efc491bd67dd67c4f8c0308ce2aa88d9f6c54d4dc7b83221b003d2decd7a0628a920d29623738e5ca705c6ed6c50ced2752
     steps:
       - checkout
       - run:
